<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="name_label_text">Name:</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="address_label_text">Address:</string>
    <string name="phone_label_text">Phone:</string>
    <string name="enter_phone_hint">Enter phone number</string>
    <string name="note_label_text">Note:</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="delivery_label_text">Choose a delivery method:</string>
    <string name="same_day_radiotext">Same day messenger service</string>
    <string name="next_day_radiotext">Next day ground delivery</string>
    <string name="pick_up_radiotext">Pick up</string>
    <string name="contact_settings">Contact</string>
    <string name="order_settings">Order</string>
    <string name="status_settings">Status</string>
    <string name="favorites_settings">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
