<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.droidcafe.MainActivity">
    <item
        android:id="@+id/order_settings"
        android:icon="@drawable/ic_shopping_cart"
        android:orderInCategory="10"
        android:title="@string/order_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/status_settings"
        android:icon="@drawable/ic_status_info"
        android:orderInCategory="20"
        android:title="@string/status_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorites_settings"
        android:icon="@drawable/ic_favorite_info"
        android:orderInCategory="30"
        android:title="@string/favorites_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/contact_settings"
        android:orderInCategory="100"
        android:title="@string/contact_settings"
        app:showAsAction="never" />
</menu>
