<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.droidcafeinput.OrderActivity">


    <TextView
        android:id="@+id/order_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_label_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_label_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_textview" />

    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/name_textview"
        app:layout_constraintBaseline_toBaselineOf="@id/name_textview"
        android:autofillHints="@string/enter_name_hint" />

    <TextView
        android:id="@+id/address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/address_label_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textview" />

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address_hint"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/address_textview"
        app:layout_constraintStart_toEndOf="@+id/address_textview"
        android:autofillHints="@string/enter_address_hint" />


    <TextView
        android:id="@+id/phone_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/phone_label_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_edittext" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_hint"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_textview"
        app:layout_constraintStart_toEndOf="@+id/phone_textview"
        android:autofillHints="@string/enter_phone_hint" />

    <TextView
        android:id="@+id/note_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/note_label_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_textview" />

    <EditText
        android:id="@+id/note_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_note_hint"
        android:inputType="textCapSentences|textMultiLine"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/note_textview"
        app:layout_constraintStart_toEndOf="@+id/note_textview"
        android:autofillHints="@string/enter_note_hint" />


    <TextView
        android:id="@+id/delivery_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_label_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_edittext" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@id/sameday_radioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_textView">

        <RadioButton
            android:id="@+id/sameday_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/same_day_radiotext" />

        <RadioButton
            android:id="@+id/nextday_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_day_radiotext" />

        <RadioButton
            android:id="@+id/pickup_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_radiotext" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
